# puerhumidity

./: .env.example  .gitignore  AGENTS.md  README.md  SignificantPrompts.md  activities_device_response.json  app.py  discover_devices.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_activities.py
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-app.yml  deploy-infra.yml
app/: __init__.py  config.py
app/models/: __init__.py  reading.py
app/routes/: __init__.py  health.py  import_data.py  ui.py  webhook.py
app/services/: __init__.py  chart.py  data_transform.py  smartthings.py
app/storage/: __init__.py  base.py  local_storage.py  table_storage.py
app/templates/: base.html  chart.html  import.html
archive/streamlit-v1/: activities_response.json  app.py  webhook_handler.py
data/: .gitignore  .gitkeep
docs/: plan.deprecated.md  plan.md
infra/: main.bicep  main.bicepparam
infra/modules/: alerts.bicep  storage-rbac.bicep  web-app.bicep
scripts/: deploy.ps1  migrate_csv.py  seed_data.py
tests/: __init__.py  conftest.py  test_app.py  test_chart.py  test_models.py  test_smartthings.py  test_storage.py  test_webhook.py
tests/payloads/: event_humidity.json  event_temperature.json  install.json  ping.json
